# mysql

./: LICENSE  mysql.cabal
grammar/: Lexer.x
src/: Lexer.hs  Lexer.x  Parser.hs  Syntax.hs  Token.hs
src/MySQL/: Lexer.hs  Parser.hs  ParserInternal.hs  Syntax.hs  Token.hs
tests/: LexerTest.hs  ParserTest.hs  test.hs
