name:                mysql
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/sukwon0709/mysql#readme
license:             BSD3
license-file:        LICENSE
author:              Sukwon Oh
maintainer:          sukwon0709@gmail.com
copyright:           Copyright: (c) 2016 Sukwon Oh
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mysql
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , tasty
                     , parsec

test-suite test
  hs-source-dirs:      tests, src
  main-is:             test.hs
  other-modules:       Lexer
                     , LexerTest
                     , Token
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 5
                     , tasty
                     , tasty-hunit
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , array