name:                mysql
version:             0.1.0.0
synopsis:            MySQL parsing library
description:         Please see README.md
homepage:            https://github.com/sukwon0709/mysql#readme
license:             BSD3
license-file:        LICENSE
author:              Sukwon Oh
maintainer:          sukwon0709@gmail.com
copyright:           Copyright: (c) 2016 Sukwon Oh
category:            Parser
build-type:          Simple
cabal-version:       >=1.10

executable mysql
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       array
                     , base >= 4.7 && < 5
                     , parsec
                     , split >= 0.2.2

library
  hs-source-dirs:      src
  exposed-modules:     MySQL.Parser
  other-modules:       Lexer
                     , Parser
                     , Syntax
                     , Token
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , parsec
                     , split >= 0.2.2

test-suite test
  hs-source-dirs:      tests, src
  main-is:             test.hs
  other-modules:       Lexer
                     , LexerTest
                     , ParserTest
                     , Token
                     , Syntax
                     , Parser
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  build-depends:       array
                     , base >= 4.7 && < 5
                     , parsec
                     , split >= 0.2.2
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck